[metadata]
name = ahkab
version = 0.18
author = Giuseppe Venturini and others
author_email = ggventurini+GITHUB@gmail.com
license = GPL
url = http://ahkab.github.io/ahkab/
description = a SPICE-like electronic circuit simulator
long_description = file: pypi_description.rst, CHANGES.rst
long_description_content_type = text/x-rst
keywords =
    electronic
    circuit
    simulator
    numeric
    symbolic

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[options]
packages = find:
zip_safe = False
install_requires =
    numpy>1.7.0
    scipy>=0.14.0
    sympy>=0.7.6
    tabulate>=0.7.3
include_package_data = True
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3

[options.extras_require]
PLOT = matplotlib>=1.1.1

[options.package_data]
ahkab = test_data/*.dat

[options.entry_points]
console_scripts = ahkab = ahkab.__main__:_cli
